--- a/LanguageSchool/Views/Test/Create.cshtml
+++ b/LanguageSchool/Views/Test/Create.cshtml
@@ -15,92 +15,96 @@
 
     <div class="container">
         @{ Html.RenderPartial("_PartHeader", "Utwórz test dla grupy"); }
-        <div class="row col-md-12 thumbnail">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="control-label col-md-2">
-                        <strong>Nazwa</strong>
-                    </div>
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group col-md-4">
-                    <div class="control-label col-md-5">
-                        <strong>Aktywny</strong>
-                    </div>
+        <div class="row">
+            <div class="bordered col-md-12">
+                <div class="row">
                     <div class="col-md-4">
-                        <div class="checkbox">
-                            @Html.EditorFor(model => model.IsActive)
-                            @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
+                        <div class="control-label col-md-2">
+                            <strong>Nazwa</strong>
+                        </div>
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <div class="control-label col-md-5">
+                            <strong>Aktywny</strong>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="checkbox">
+                                @Html.EditorFor(model => model.IsActive)
+                                @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="control-label col-md-2">
-                        <strong>Opis</strong>
-                    </div>
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group col-md-4">
-                    <div class="control-label col-md-5">
-                        <strong>Liczba pytań otwartych</strong>
-                    </div>
+                <div class="row">
                     <div class="col-md-4">
-                        @Html.EditorFor(model => model.NumberOfOpenQuestions, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.NumberOfOpenQuestions, "", new { @class = "text-danger" })
+                        <div class="control-label col-md-2">
+                            <strong>Opis</strong>
+                        </div>
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
-                <div class="form-group col-md-4">
-                    <div class="control-label col-md-5">
-                        <strong>Liczba pytań zamkniętych</strong>
+                    <div class="form-group col-md-4">
+                        <div class="control-label col-md-5">
+                            <strong>Liczba pytań otwartych</strong>
+                        </div>
+                        <div class="col-md-4">
+                            @Html.EditorFor(model => model.NumberOfOpenQuestions, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.NumberOfOpenQuestions, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                    <div class="col-md-4">
-                        @Html.EditorFor(model => model.NumberOfClosedQuestions, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.NumberOfClosedQuestions, "", new { @class = "text-danger" })
+                    <div class="form-group col-md-4">
+                        <div class="control-label col-md-5">
+                            <strong>Liczba pytań zamkniętych</strong>
+                        </div>
+                        <div class="col-md-4">
+                            @Html.EditorFor(model => model.NumberOfClosedQuestions, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.NumberOfClosedQuestions, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         @{ Html.RenderPartial("_PartHeader", "Wybierz tematy dla testu"); }
-        <div class="row thumbnail col-md-12">
-            <table class="table table-striped table-bordered">
-                <tr>
-                    <th>
-                        Nazwa
-                    </th>
-                    <th>
-                        Opis
-                    </th>
-                    <th>
-                        Wybrano
-                    </th>
-                </tr>
-                @for (var i = 0; i < Model.LessonSubjects.Count; i++)
-                {
-                    @Html.HiddenFor(model => model.LessonSubjects[i].Id)
+        <div class="row">
+            <div class="bordered col-md-12">
+                <table class="table table-striped table-bordered">
                     <tr>
-                        <td>
-                            @Model.LessonSubjects[i].Name
-                        </td>
-                        <td>
-                            @Model.LessonSubjects[i].Description
-                        </td>
-                        <td>
-                            <div class="checkbox">
-                                @Html.EditorFor(model => model.LessonSubjects[i].IsMarked)
-                            </div>
-                        </td>
+                        <th>
+                            Nazwa
+                        </th>
+                        <th>
+                            Opis
+                        </th>
+                        <th>
+                            Wybrano
+                        </th>
                     </tr>
-                }
-            </table>
+                    @for (var i = 0; i < Model.LessonSubjects.Count; i++)
+                    {
+                        @Html.HiddenFor(model => model.LessonSubjects[i].Id)
+                        <tr>
+                            <td>
+                                @Model.LessonSubjects[i].Name
+                            </td>
+                            <td>
+                                @Model.LessonSubjects[i].Description
+                            </td>
+                            <td>
+                                <div class="checkbox">
+                                    @Html.EditorFor(model => model.LessonSubjects[i].IsMarked)
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                </table>
+            </div>
         </div>
         <div class="row col-md-12">
             <div class="col-md-2 col-md-offset-10">
