--- a/LanguageSchool/Views/UserData/Create.cshtml
+++ b/LanguageSchool/Views/UserData/Create.cshtml
@@ -138,7 +138,7 @@
             </div>
         </div>
     </div>
-    <div id="timetable" class="thumbnail" style="display: none">
+    <div id="timetable" class="bordered" style="display: none">
         <div class="btn-group-toggle" data-toggle="buttons">
             <table class="table table-bordered">
                 <tr>
