--- a/LanguageSchool/Views/Question/AddAnswers.cshtml
+++ b/LanguageSchool/Views/Question/AddAnswers.cshtml
@@ -25,71 +25,73 @@
     }
 
     <div class="container">
-        <div class="row col-md-12">
-            <div class="thumbnail col-md-3">
-                <div class="col-md-6">
-                    <input type="submit" name="next" value="Dalej" class="btn btn-block btn-default" />
-                </div>
-                <div class="col-md-6">
-                    <input type="submit" name="submit" id="submit" value="Utwórz" class="btn btn-block btn-primary" disabled="disabled"/>
-                </div>
-            </div>
-        </div>
-        <div class="row thumbnail col-md-12">
-            <div class="row">
-                <div class="form-group">
-                    <div class="control-label col-md-2">
-                        <strong>Treść</strong>
-                    </div>
-                    <div class="col-md-10">
-                        @Html.DisplayFor(model => model.Contents)
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
+        <div class="row">
+            <div class="bordered col-md-12">
+                <div class="row">
                     <div class="form-group">
-                        <div class="control-label col-md-7">
-                            <strong>Wyświetlane</strong>
+                        <div class="control-label col-md-2">
+                            <strong>Treść</strong>
                         </div>
-                        <div class="col-md-3">
-                            @Html.DisplayFor(model => model.NumberOfPossibleAnswers)
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <div class="control-label col-md-7">
-                            <strong>Punkty</strong>
-                        </div>
-                        <div class="col-md-3">
-                            @Html.DisplayFor(model => model.Points)
+                        <div class="col-md-10">
+                            @Html.DisplayFor(model => model.Contents)
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <div class="control-label col-md-7">
-                            <strong>Wielokrotnego wyboru</strong>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <div class="control-label col-md-7">
+                                <strong>Wyświetlane</strong>
+                            </div>
+                            <div class="col-md-3">
+                                @Html.DisplayFor(model => model.NumberOfPossibleAnswers)
+                            </div>
                         </div>
-                        <div class="col-md-3">
-                            @Html.DisplayFor(model => model.IsMultichoice)
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <div class="control-label col-md-7">
+                                <strong>Punkty</strong>
+                            </div>
+                            <div class="col-md-3">
+                                @Html.DisplayFor(model => model.Points)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <div class="control-label col-md-7">
+                                <strong>Wielokrotnego wyboru</strong>
+                            </div>
+                            <div class="col-md-3">
+                                @Html.DisplayFor(model => model.IsMultichoice)
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        
+        <div class="row">
+            <div class="col-md-5 col-md-offset-7">
+                <div class="col-md-6">
+                    <input type="submit" name="next" value="Dodaj kolejną odpowiedź" class="btn btn-block btn-default" />
+                </div>
+                <div class="col-md-6">
+                    <input type="submit" name="submit" id="submit" value="Utwórz pytanie" class="btn btn-block btn-primary" disabled="disabled" />
+                </div>
+            </div>
+        </div>
         @if (curr >= 1)
         {
-            <div class="row thumbnail col-md-12">
-                <table class="table table-striped table-bordered">
-                    <tr>
-                        <th>
-                            Odpowiedzi
-                        </th>
-                    </tr>                    
-                    @for (var i = 0; i < curr; i++)
+            <div class="row">
+                <div class="bordered col-md-12">
+                    <table class="table table-striped table-bordered">
+                        <tr>
+                            <th>
+                                Odpowiedzi
+                            </th>
+                        </tr>
+                        @for (var i = 0; i < curr; i++)
                     {
                         var color = "black";
 
@@ -102,30 +104,33 @@
                                 @Model.Answers[i].Answer
                             </td>
                         </tr>
-                    }
-                </table>
+                        }
+                    </table>
+                </div>
             </div>
         }
 
-        <div class="row form-horizontal thumbnail col-md-12">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <div class="control-label col-md-4">
-                        <strong>Treść</strong>
-                    </div>
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.Answers[curr].Answer, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Answers[curr].Answer, "", new { @class = "text-danger" })
+        <div class="row form-horizontal">
+            <div class="bordered col-md-12">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <div class="control-label col-md-4">
+                            <strong>Treść</strong>
+                        </div>
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.Answers[curr].Answer, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Answers[curr].Answer, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <div class="control-label col-md-4">
-                        <strong>Poprawna</strong>
-                    </div>
-                    <div class="col-md-8">
-                        @Html.CheckBoxFor(model => model.Answers[curr].IsCorrect, new { @id = "isCorrect", @onchange = "enableButton()" })
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <div class="control-label col-md-4">
+                            <strong>Poprawna</strong>
+                        </div>
+                        <div class="col-md-8">
+                            @Html.CheckBoxFor(model => model.Answers[curr].IsCorrect, new { @id = "isCorrect", @onchange = "enableButton()" })
+                        </div>
                     </div>
                 </div>
             </div>
