--- a/LanguageSchool/Views/LessonSubject/Details.cshtml
+++ b/LanguageSchool/Views/LessonSubject/Details.cshtml
@@ -62,7 +62,7 @@
                 <button class="btn btn-block btn-danger" type="button" onclick="location.href='@Url.Action("Delete", "LessonSubject")'">Usuń</button>
             </div>
             <div class="col-md-4">
-                <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Upload", "Material", new { lessonSubjectId = Model.Id })'">Dodaj materiały</button>
+                <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Upload", "Material", new { lessonSubjectId = Model.Id })'">Udostępnij materiały</button>
             </div>
             <div class="col-md-4">
                 <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Question", new { lessonSubjectId = Model.Id } )'">Pytania z tematu</button>
@@ -71,6 +71,7 @@
     </div>
     @if (Model.Materials.Any())
     {
+        Html.RenderPartial("_PartHeader", "Materiały udostępnione dla tematu");
         <div class="row">
             <div class="bordered col-md-12">
                 <table class="table table-striped table-bordered">
