--- a/LanguageSchool/Views/Question/Index.cshtml
+++ b/LanguageSchool/Views/Question/Index.cshtml
@@ -59,6 +59,9 @@
                         Punkty
                     </th>
                     <th>
+                        Wielokrotnego
+                    </th>
+                    <th>
                         Odpowiedzi
                     </th>
                 </tr>
@@ -66,6 +69,13 @@
                 @foreach (var closedQuestion in Model.ClosedQuestions)
                 {
                     var questionAnswers = closedQuestion.Answers.Where(a => !a.IsDeleted).ToList();
+
+                    var multichoice = "nie";
+
+                    if (closedQuestion.IsMultichoice)
+                    {
+                        multichoice = "tak";
+                    }
 
                     <tr>
                         <td>
@@ -76,6 +86,9 @@
                         </td>
                         <td>
                             @Html.DisplayFor(cq => closedQuestion.Points)
+                        </td>
+                        <td>
+                            @multichoice
                         </td>
                         <td>
                             <ul>
