Wyciągnięcie pytań na potrzeby testu

--- a/LanguageSchool/Views/Group/Details.cshtml
+++ b/LanguageSchool/Views/Group/Details.cshtml
@@ -137,7 +137,7 @@
                                 @test.Comment
                             </td>
                             <td>
-                                @test.NumberOfClosedQuestions/@test.NumberOfOpenQuestions/@test.NumberOfQuestions
+                                @test.NumberOfClosedQuestions/@test.NumberOfOpenQuestions/@(test.NumberOfOpenQuestions + test.NumberOfClosedQuestions)
                             </td>
                             <td>
                                 @test.Points
