--- a/LanguageSchool/Views/LessonSubject/LessonSubjects.cshtml
+++ b/LanguageSchool/Views/LessonSubject/LessonSubjects.cshtml
@@ -38,4 +38,39 @@
             </table>
         </div>
     </div>
+    @if(Model.Tests.Any())
+    {
+    { Html.RenderPartial("_PartHeader", "Testy"); }
+        <div class="row">
+            <div class="bordered col-md-12">
+                <table class="table table-striped table-bordered">
+                    <tr>
+                        <th>
+                            Nazwa
+                        </th>
+                        <th>
+                            Opis
+                        </th>
+                        <th>
+                            Liczba pytań
+                        </th>
+                    </tr>
+                    @foreach (var test in Model.Tests.Where(t => t.IsActive))
+                    {
+                        <tr>
+                            <td>
+                                @Html.ActionLink(test.Name, "Take", "Test", new { testId = test.Id }, null)
+                            </td>
+                            <td>
+                                @test.Comment
+                            </td>
+                            <td>
+                                @test.NumberOfClosedQuestions/@test.NumberOfOpenQuestions/@(test.NumberOfOpenQuestions + test.NumberOfClosedQuestions)
+                            </td>
+                        </tr>
+                    }
+                </table>
+            </div>
+        </div>
+    }
 </div>
