--- a/LanguageSchool/Views/EntryTest/TakeTest.cshtml
+++ b/LanguageSchool/Views/EntryTest/TakeTest.cshtml
@@ -12,7 +12,7 @@
 {
     @Html.HiddenFor(model => model.CourseId)
     @Html.HiddenFor(model => model.Points)
-    @Html.HiddenFor(model => model.Questions)
+    @Html.HiddenFor(model => model.ClosedQuestions)
     
     <h1 class="display-3">@Model.Name</h1>
 
@@ -24,24 +24,24 @@
     <hr />
 
     <table class="table">
-        @for (int i = 0; i < Model.Questions.Count; i++)
+        @for (int i = 0; i < Model.ClosedQuestions.Count; i++)
         {
-            @Html.HiddenFor(q => Model.Questions[i].Points)
+            @Html.HiddenFor(q => Model.ClosedQuestions[i].Points)
 
             <tr>
                 <td>
-                    @Model.Questions[i].Contents
+                    @Model.ClosedQuestions[i].Contents
 
-                    @for (int j = 0; j < Model.Questions[i].Answers.Count; j++)
+                    @for (int j = 0; j < Model.ClosedQuestions[i].Answers.Count; j++)
                     {
                         <div class="form-group">
                             <div class="col-md-2">
-                                @Model.Questions[i].Answers[j].Answer
+                                @Model.ClosedQuestions[i].Answers[j].Answer
                             </div>
                             <div class="col-md-10">
-                                @Html.RadioButton(Model.Questions[i].Id.ToString(), Model.Questions[i].Answers[j].IsMarked)
+                                @Html.RadioButton(Model.ClosedQuestions[i].Id.ToString(), Model.ClosedQuestions[i].Answers[j].IsMarked)
 
-                                @Html.HiddenFor(a => Model.Questions[i].Answers[j].IsCorrect)
+                                @Html.HiddenFor(a => Model.ClosedQuestions[i].Answers[j].IsCorrect)
                             </div>
                         </div>
                     }
