Przeniesienie boxów na właściwą stronę

--- a/LanguageSchool/Views/Test/Take.cshtml
+++ b/LanguageSchool/Views/Test/Take.cshtml
@@ -34,6 +34,10 @@
                     }
                 </div>
             </div>
+        <div class="row">
+            <div class="bordered col-md-12">
+            </div>
+        </div>
             <div class="row">
                 <div class="col-md-3 col-md-offset-9">
                     <input type="submit" value="Zakończ test" class="btn btn-block btn-default" />
