--- a/LanguageSchool/Views/Test/_PrepareAnswers.cshtml
+++ b/LanguageSchool/Views/Test/_PrepareAnswers.cshtml
@@ -14,11 +14,11 @@
                 @Model.ClosedQuestions[i].Answers[j].Answer
                 @if (Model.ClosedQuestions[i].IsMultichoice)
                 {
-                    @Html.CheckBoxFor(model => model.ClosedQuestions[i].Answers[j].IsMarked)
+                    @Html.CheckBoxFor(model => model.ClosedQuestions[i].Answers[j].IsMarked, new { @style = "float:right" })
                 }
                 else
                 {
-                    @Html.RadioButtonFor(model => model.ClosedQuestions[i].ChosenAnswerId, Model.ClosedQuestions[i].Answers[j].Id)
+                    @Html.RadioButtonFor(model => model.ClosedQuestions[i].ChosenAnswerId, Model.ClosedQuestions[i].Answers[j].Id, new { @style = "float:right" })
                 }
             </li>
         }
